translated transplant hub minus staff

--- a/es/hub/transplant/index.html
+++ b/es/hub/transplant/index.html
@@ -10,69 +10,79 @@
     gtag('js', new Date());
     gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
   </script>
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Kidney Transplant Overview</title>
+  <title>Centro de Trasplante de Riñón | Tito Needs a Kidney</title>
+  <meta name="description" content="Guía clara del trasplante de riñón: preparación (preoperatorio), cirugía y recuperación (posoperatorio), con explicaciones prácticas y equipo de atención." />
+
   <!-- Google Fonts: Open Sans -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="/assets/css/main.css" />
   <script src="/scripts/include.js" defer></script>
   <script src="/scripts/active-link.js" defer></script>
 </head>
 <body>
   <div data-include="/includes_es/header.html"></div>
+
   <main class="content" id="main">
     <div data-include="/includes_es/transplant-subnav.html"></div>
-    
-      <h1>Kidney Transplant Hub</h1>
-  <p>
-    A kidney transplant is a journey with different stages—from preparation and 
-    testing to surgery and lifelong care afterward. This hub guides you through 
-    each phase with practical information, staff introductions, and lived 
-    experiences to help you feel prepared and supported.
-  </p>
 
-  <section class="testimonial-summary">
-    <h2>
-     <a href=".html" data-evt="transplant:index:">
-    Pre-Op: Preparing for Transplant</a></h2>
+    <h1>Centro de Trasplante de Riñón</h1>
     <p>
-      Learn what happens before your transplant, including evaluation and testing, 
-      finding a donor, understanding risks, and meeting the pre-op care team.
+      Un trasplante de riñón es un camino con varias etapas: desde la preparación y
+      los estudios previos, hasta la cirugía y el cuidado de por vida después.
+      Este centro te guía en cada fase con información práctica, presentación del equipo
+      y experiencias reales para que te sientas preparado y acompañado.
     </p>
-  </section>
 
-  <section class="testimonial-summary">
-    <h2>
-    <a href=".html" data-evt="transplant:index:">
-    Transplant Surgery: Hospital Stay</a></h2>
-    <p>
-      Understand what happens in the hospital during the transplant surgery: 
-      surgical staff roles, anesthesia, and immediate post-surgery recovery.
-    </p>
-  </section>
+    <section class="testimonial-summary">
+      <h2>
+        <a href="preop/index.html" data-evt="transplant:index:preop">
+          Preoperatorio: preparación para el trasplante
+        </a>
+      </h2>
+      <p>
+        Qué sucede antes del trasplante: evaluación y estudios, búsqueda de donante,
+        comprensión de riesgos y presentación del equipo de preoperatorio.
+      </p>
+    </section>
 
-  <section class="testimonial-summary">
-    <h2>
-      <a href=".html" data-evt="transplant:index:">
-    Post-Op: Life After Transplant</a></h2>
-    <p>
-      Explore recovery after discharge, ongoing follow-up care, post-op staff 
-      support, managing complications, and building a healthy life with 
-      your new kidney.
-    </p>
-  </section>
+    <section class="testimonial-summary">
+      <h2>
+        <a href="surgery/index.html" data-evt="transplant:index:surgery">
+          Cirugía de trasplante: estancia hospitalaria
+        </a>
+      </h2>
+      <p>
+        Qué ocurre en el hospital durante la cirugía: roles del personal quirúrgico,
+        anestesia y recuperación inmediata tras la intervención.
+      </p>
+    </section>
 
-  <section class="callout">
-    <p>
-      Each stage of the transplant process is different. Start where you are now, 
-      or explore them all to know what’s ahead and how to prepare for the best 
-      possible outcome.
-    </p>
-  </section>
+    <section class="testimonial-summary">
+      <h2>
+        <a href="postop/index.html" data-evt="transplant:index:postop">
+          Posoperatorio: vida después del trasplante
+        </a>
+      </h2>
+      <p>
+        Recuperación al alta, controles de seguimiento, apoyo del equipo de posoperatorio,
+        manejo de complicaciones y construcción de hábitos saludables con tu nuevo riñón.
+      </p>
+    </section>
+
+    <section class="callout">
+      <p>
+        Cada etapa del proceso es distinta. Empieza por donde estés ahora o recórrelas todas
+        para saber qué viene y cómo prepararte para el mejor resultado posible.
+      </p>
+    </section>
   </main>
+
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
