--- a/es/hub/transplant/postop/complications.html
+++ b/es/hub/transplant/postop/complications.html
@@ -12,7 +12,8 @@
   </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Post-Op: Complications - Kidney Transplant Hub</title>
+  <title>Posoperatorio: Complicaciones — Trasplante de riñón</title>
+  <meta name="description" content="Complicaciones tras el trasplante renal: rechazo, infecciones, efectos de medicamentos, problemas urológicos, coágulos y señales de alarma. Cuándo llamar al equipo." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
@@ -25,57 +26,57 @@
   <main class="content" id="main">
     <div data-include="/includes_es/transplant-subnav.html"></div>
     <div data-include="/includes_es/transplant-postop-subnav.html"></div>
-<h1>Post-Op: Complications</h1>
-<p>Most transplants do well. Problems are easier to manage when caught early. If something feels wrong, call—early beats perfect.</p>
 
-<h2>Rejection (immune response)</h2>
-<ul>
-  <li><strong>What it is:</strong> your immune system attacks the kidney; can happen early or years later.</li>
-  <li><strong>How it’s found:</strong> rising creatinine, urine changes, symptoms; sometimes a biopsy confirms.</li>
-  <li><strong>Treatment:</strong> adjust meds; some cases need short infusions or a brief hospital stay.</li>
-  <li><strong>Report fast:</strong> fever, new pain over the kidney, swelling, less urine, sudden weight gain.</li>
-</ul>
+    <h1>Posoperatorio: Complicaciones</h1>
+    <p>La mayoría de los trasplantes van bien. Los problemas son más fáciles de manejar si se detectan temprano. Si algo no se siente bien, llama: mejor pronto que perfecto.</p>
 
-<h2>Infections</h2>
-<ul>
-  <li><strong>0–1 month:</strong> surgical/line infections and hospital germs.</li>
-  <li><strong>1–6 months:</strong> higher risk for certain viruses and “opportunistic” infections; call for fever, persistent cough/diarrhea.</li>
-  <li><strong>After 6 months:</strong> community infections (flu, COVID, stomach bugs) are more common—stay up to date on vaccines and call early for antivirals if exposed.</li>
-</ul>
+    <h2>Rechazo (respuesta inmunitaria)</h2>
+    <ul>
+      <li><strong>Qué es:</strong> tu sistema inmune ataca el riñón; puede ocurrir temprano o años después.</li>
+      <li><strong>Cómo se detecta:</strong> creatinina en ascenso, cambios en orina, síntomas; a veces se confirma con biopsia.</li>
+      <li><strong>Tratamiento:</strong> ajuste de medicación; algunos casos requieren infusiones breves o una corta hospitalización.</li>
+      <li><strong>Avisa de inmediato si hay:</strong> fiebre, dolor nuevo sobre el injerto, hinchazón, menos orina, aumento súbito de peso.</li>
+    </ul>
 
-<h2>Medicine side effects</h2>
-<ul>
-  <li><strong>Vitals & labs:</strong> higher blood pressure, higher blood sugar/new diabetes, cholesterol changes.</li>
-  <li><strong>Day-to-day:</strong> tremor, headache, stomach upset/diarrhea, sleep or mood shifts (especially with steroids).</li>
-  <li><strong>Longer term:</strong> thinner bones—ask about vitamin D/calcium and screening.</li>
-  <li><strong>Interactions:</strong> some antibiotics/antifungals, seizure meds, and certain citrus (e.g., grapefruit) can change levels—always check before new meds/supplements.</li>
-</ul>
+    <h2>Infecciones</h2>
+    <ul>
+      <li><strong>0–1 mes:</strong> infecciones de herida/​líneas y gérmenes hospitalarios.</li>
+      <li><strong>1–6 meses:</strong> mayor riesgo de ciertos virus y “oportunistas”; llama por fiebre, tos/diarrea persistentes.</li>
+      <li><strong>Después de 6 meses:</strong> más comunes las infecciones comunitarias (gripe, COVID, gastroenteritis); mantén vacunas al día y llama pronto para antivirales si hubo exposición.</li>
+    </ul>
 
-<h2>Surgical & urologic issues</h2>
-<ul>
-  <li><strong>Ureter problems:</strong> leaks or narrowings can cause pain, swelling, or low urine; usually fixable with procedures.</li>
-  <li><strong>Fluid collections:</strong> seroma/lymphocele near the kidney may need drainage.</li>
-  <li><strong>Wound issues & hernias:</strong> redness, drainage, or bulges—report promptly.</li>
-</ul>
+    <h2>Efectos de los medicamentos</h2>
+    <ul>
+      <li><strong>Signos en controles:</strong> presión alta, azúcar alta/diabetes nueva, cambios en colesterol.</li>
+      <li><strong>Día a día:</strong> temblor, dolor de cabeza, malestar/diarrea, alteraciones del sueño o del ánimo (sobre todo con esteroides).</li>
+      <li><strong>A largo plazo:</strong> huesos más frágiles; pregunta por vitamina D/calcio y tamizajes.</li>
+      <li><strong>Interacciones:</strong> algunos antibióticos/antifúngicos, fármacos anticonvulsivos y ciertos cítricos (p. ej., pomelo/toronja) cambian los niveles—consulta antes de nuevos fármacos o suplementos.</li>
+    </ul>
 
-<h2>Clots & heart/lungs</h2>
-<ul>
-  <li><strong>Blood clots (DVT/PE):</strong> calf pain/swelling or sudden shortness of breath needs urgent care.</li>
-  <li><strong>Heart risk:</strong> blood pressure, cholesterol, and diabetes control still matter after transplant.</li>
-</ul>
+    <h2>Problemas quirúrgicos y urológicos</h2>
+    <ul>
+      <li><strong>Uréter:</strong> fugas o estrecheces pueden causar dolor, hinchazón o poca orina; suelen corregirse con procedimientos.</li>
+      <li><strong>Acúmulos de líquido:</strong> seroma/linfocele cerca del injerto; a veces requieren drenaje.</li>
+      <li><strong>Herida y hernias:</strong> enrojecimiento, secreción o bultos—avisa cuanto antes.</li>
+    </ul>
 
-<h2>When to call</h2>
-<ul>
-  <li><strong>Call your clinic promptly:</strong> fever &gt; 100.4–101°F, chills, worsening cough, vomiting that prevents meds, new/worsening pain over the kidney, less urine, sudden weight gain.</li>
-  <li><strong>Call 911 / go to ER:</strong> chest pain, trouble breathing, one-sided leg swelling/pain, severe dehydration/confusion, stroke-like symptoms.</li>
-</ul>
+    <h2>Coágulos y corazón/pulmón</h2>
+    <ul>
+      <li><strong>Coágulos (TVP/EP):</strong> dolor/hinchazón en la pantorrilla o falta de aire súbita requieren atención urgente.</li>
+      <li><strong>Riesgo cardiovascular:</strong> presión, colesterol y diabetes siguen importando después del trasplante.</li>
+    </ul>
 
-<div class="callout">
-  <p><strong>Questions to ask:</strong> If my labs rise, what tests come next? What’s my “call right away” list? Which meds or foods can change my drug levels?</p>
-</div>
+    <h2>Cuándo llamar</h2>
+    <ul>
+      <li><strong>Llama a tu clínica de inmediato:</strong> fiebre &gt; 38&nbsp;°C (100.4–101&nbsp;°F), escalofríos, tos en empeoramiento, vómitos que impiden tomar medicación, dolor nuevo/peor sobre el riñón, menos orina, aumento brusco de peso.</li>
+      <li><strong>Llama al 112 / acude a Urgencias:</strong> dolor de pecho, dificultad para respirar, hinchazón/dolor de una sola pierna, deshidratación severa/confusión, síntomas tipo ictus.</li>
+    </ul>
 
-<p class="disclaimer">This page is educational and can’t cover every case. Your care team will personalize prevention and treatment.</p>
+    <div class="callout">
+      <p><strong>Preguntas para tu equipo:</strong> Si suben mis análisis, ¿qué pruebas siguen? ¿Cuál es mi lista de “llamar de inmediato”? ¿Qué medicamentos o alimentos pueden alterar mis niveles?</p>
+    </div>
 
+    <p class="disclaimer">Página educativa; no cubre todos los casos. Tu equipo personalizará la prevención y el tratamiento.</p>
   </main>
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
