--- a/es/hub/transplant/postop/index.html
+++ b/es/hub/transplant/postop/index.html
@@ -12,8 +12,8 @@
   </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Post-Op Overview</title>
-  <!-- Google Fonts: Open Sans -->
+  <title>Posoperatorio: Panorama general — Trasplante de riñón</title>
+  <meta name="description" content="Qué esperar después del alta: cuidados, seguimiento con el equipo de trasplante, posibles complicaciones y consejos para proteger tu nuevo riñón a largo plazo." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
@@ -27,53 +27,51 @@
     <div data-include="/includes_es/transplant-subnav.html"></div>
     <div data-include="/includes_es/transplant-postop-subnav.html"></div>
     
-   <h1>Post-Op Overview</h1>
-  <p>
-    After leaving the hospital, recovery continues at home and in follow-up visits 
-    with your transplant team. This section explains ongoing care, introduces the 
-    post-op staff who support you, and covers potential complications and 
-    long-term health tips.
-  </p>
-
-  <section class="testimonial-summary">
-    <h2><a href="/es/hub/transplant/postop/recovery.html" data-evt="postop:recovery">Recovery After Discharge</a></h2>
+    <h1>Panorama general del posoperatorio</h1>
     <p>
-      Learn about wound care, activity restrictions, and how your transplant team 
-      monitors your new kidney in the weeks after surgery.
+      Tras dejar el hospital, la recuperación continúa en casa y en las visitas de seguimiento 
+      con tu equipo de trasplante. Esta sección explica los cuidados continuos, presenta al 
+      personal que te apoya en el posoperatorio y resume las posibles complicaciones y consejos 
+      para tu salud a largo plazo.
     </p>
-  </section>
 
-  <section class="testimonial-summary">
-    <h2><a href="/es/hub/transplant/postop/staff/" data-evt="postop:staff">Post-Op Staff Roles</a></h2>
-    <p>
-      Meet the nurses, pharmacists, dietitians, and transplant coordinators who 
-      guide your long-term care after transplant surgery.
-    </p>
-  </section>
+    <section class="testimonial-summary">
+      <h2><a href="/es/hub/transplant/postop/recovery.html" data-evt="postop:recovery">Recuperación tras el alta</a></h2>
+      <p>
+        Cuidados de la herida, restricciones de actividad y cómo tu equipo controla el 
+        funcionamiento del nuevo riñón durante las primeras semanas.
+      </p>
+    </section>
 
-  <section class="testimonial-summary">
-    <h2><a href="/es/hub/transplant/postop/complications.html" data-evt="postop:complications">Complications & Rejection</a></h2>
-    <p>
-      Understand the signs of kidney rejection, infections, and other complications, 
-      and learn how your team helps manage and prevent them.
-    </p>
-  </section>
+    <section class="testimonial-summary">
+      <h2><a href="/es/hub/transplant/postop/staff/" data-evt="postop:staff">Equipo posoperatorio</a></h2>
+      <p>
+        Conoce a enfermeras, farmacéuticos, dietistas y coordinadores de trasplante que 
+        guían tu cuidado a largo plazo tras la cirugía.
+      </p>
+    </section>
 
-  <section class="testimonial-summary">
-    <h2><a href="/es/hub/transplant/postop/life-after.html" data-evt="postop:life-after">Life After Transplant</a></h2>
-    <p>
-      Explore what long-term life with a kidney transplant looks like, including 
-      medications, diet, and ways to stay healthy and active.
-    </p>
-  </section>
+    <section class="testimonial-summary">
+      <h2><a href="/es/hub/transplant/postop/complications.html" data-evt="postop:complications">Complicaciones y rechazo</a></h2>
+      <p>
+        Señales de rechazo, infecciones y otros problemas, y cómo tu equipo ayuda a prevenirlos 
+        y manejarlos a tiempo.
+      </p>
+    </section>
 
-  <section class="callout">
-    <p>
-      Recovery doesn’t end when you leave the hospital. With the right care team and 
-      knowledge, you can protect your new kidney and live a full, active life for 
-      many years to come.
-    </p>
-  </section>
+    <section class="testimonial-summary">
+      <h2><a href="/es/hub/transplant/postop/life-after.html" data-evt="postop:life-after">Vida después del trasplante</a></h2>
+      <p>
+        Medicación, alimentación y hábitos para mantenerte sano y activo con tu nuevo riñón.
+      </p>
+    </section>
+
+    <section class="callout">
+      <p>
+        La recuperación no termina al salir del hospital. Con el equipo adecuado y la información 
+        correcta, puedes proteger tu nuevo riñón y vivir una vida plena y activa durante muchos años.
+      </p>
+    </section>
   </main>
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
