--- a/es/hub/transplant/postop/recovery.html
+++ b/es/hub/transplant/postop/recovery.html
@@ -12,7 +12,8 @@
   </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Post-Op: Recovery - Kidney Transplant Hub</title>
+  <title>Posoperatorio: Recuperación — Centro de Trasplante Renal</title>
+  <meta name="description" content="Guía de recuperación tras un trasplante renal: del hospital a casa, frecuencia de análisis el primer año, cuidado de la herida y dispositivos, actividad, hidratación y cuándo llamar." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
@@ -25,104 +26,100 @@
   <main class="content" id="main">
     <div data-include="/includes_es/transplant-subnav.html"></div>
     <div data-include="/includes_es/transplant-postop-subnav.html"></div>
-<h1>Post-Op: Recovery</h1>
-<p>Recovery is individual. Most people go home in 2–4 days, feel steadier by week 2, and rebuild strength over the next few months. The first year is about steady routines, early calls when something feels off, and small wins that add up.</p>
 
-<h2>Hospital → Home: first 6 weeks</h2>
-<ul>
-  <li><strong>Hospital (days 1–4):</strong> walk the day of/after surgery; pain control; urine, blood pressure, and labs watched closely.</li>
-  <li><strong>Week 1–2:</strong> expect fatigue. Short walks daily. Shower okay; no soaking (tubs, pools, hot tubs) until fully closed and cleared.</li>
-  <li><strong>Weeks 3–6:</strong> walks &gt; 30 minutes most days; light chores. Many return to desk work by 2–4 weeks; physical jobs often 4–8+ weeks with clearance.</li>
-</ul>
+    <h1>Posoperatorio: Recuperación</h1>
+    <p>La recuperación es individual. La mayoría vuelve a casa en 2–4 días, se siente más estable hacia la semana 2 y recupera fuerza en los meses siguientes. El primer año trata de rutinas constantes, llamadas tempranas si algo se siente raro y pequeños logros que se acumulan.</p>
 
-<h2>Clinic &amp; labs: typical first-year cadence</h2>
-<p>Every center adjusts to your situation. This is a common “if stable” outline.</p>
-<ul>
-  <li><strong>Weeks 0–2:</strong> labs 2×/week; clinic weekly (sometimes twice week 1). Draw trough level <em>before</em> morning dose.</li>
-  <li><strong>Weeks 3–6:</strong> labs weekly; clinic weekly or every 2 weeks.</li>
-  <li><strong>Months 2–3:</strong> labs every 1–2 weeks; clinic every 2–4 weeks.</li>
-  <li><strong>Months 4–6:</strong> labs every 2–4 weeks; clinic every 4–8 weeks.</li>
-  <li><strong>Months 7–12:</strong> labs monthly; clinic every 2–3 months.</li>
-  <li><strong>After year 1 (if stable):</strong> labs every 1–3 months; clinic every 3–6 months.</li>
-</ul>
+    <h2>Del hospital a casa: primeras 6 semanas</h2>
+    <ul>
+      <li><strong>Hospital (días 1–4):</strong> caminar el mismo día o al siguiente; control del dolor; vigilancia estrecha de orina, presión arterial y análisis.</li>
+      <li><strong>Semanas 1–2:</strong> espera fatiga. Caminatas cortas a diario. Ducha sí; no sumergirse (tina, piscina, jacuzzi) hasta que cierre por completo y te autoricen.</li>
+      <li><strong>Semanas 3–6:</strong> caminatas &gt; 30 minutos la mayoría de los días; tareas ligeras. Muchas personas vuelven a trabajo de oficina en 2–4 semanas; trabajos físicos a menudo 4–8+ semanas con alta.</li>
+    </ul>
 
-<h3>What’s usually checked</h3>
-<ul>
-  <li><strong>Kidney &amp; electrolytes:</strong> creatinine/eGFR, BUN, potassium, sodium, bicarbonate, magnesium, phosphorus.</li>
-  <li><strong>Blood &amp; urine:</strong> CBC, urinalysis, urine protein/creatinine ratio.</li>
-  <li><strong>Drug level:</strong> tacrolimus/calcineurin-inhibitor trough (timed before dose).</li>
-  <li><strong>Metabolic:</strong> blood pressure logs, weight, lipids (periodic), A1c if sugars run high.</li>
-  <li><strong>Infection monitoring:</strong> many centers screen for BK virus regularly in year one; CMV monitoring depends on your risk and meds.</li>
-</ul>
+    <h2>Consultas y análisis: frecuencia típica del primer año</h2>
+    <p>Cada centro adapta el plan a tu situación. Esta es una guía común si todo va estable.</p>
+    <ul>
+      <li><strong>Semanas 0–2:</strong> análisis 2×/semana; consulta semanal (a veces dos la primera semana). Extrae el nivel valle <em>antes</em> de la dosis de la mañana.</li>
+      <li><strong>Semanas 3–6:</strong> análisis semanales; consulta semanal o cada 2 semanas.</li>
+      <li><strong>Meses 2–3:</strong> análisis cada 1–2 semanas; consulta cada 2–4 semanas.</li>
+      <li><strong>Meses 4–6:</strong> análisis cada 2–4 semanas; consulta cada 4–8 semanas.</li>
+      <li><strong>Meses 7–12:</strong> análisis mensuales; consulta cada 2–3 meses.</li>
+      <li><strong>Después del año 1 (si estable):</strong> análisis cada 1–3 meses; consulta cada 3–6 meses.</li>
+    </ul>
 
-<h2>Immunosuppression basics</h2>
-<ul>
-  <li><strong>Timing is medicine:</strong> take anti-rejection meds on time, every time. Set alarms. If a dose is late or missed, don’t double up—call for instructions.</li>
-  <li><strong>Trough labs:</strong> for level checks, do blood draw <em>before</em> the morning dose and bring exact last-dose times.</li>
-  <li><strong>Interactions:</strong> always check before new prescriptions, OTCs, or supplements. Some antibiotics/antifungals, seizure meds, and certain citrus (e.g., grapefruit, Seville orange, pomelo) can change levels.</li>
-  <li><strong>Vaccines:</strong> stay current on non-live vaccines (flu, COVID, etc.). Live vaccines are generally avoided—confirm with your team.</li>
-  <li><strong>Do not self-adjust:</strong> never change doses without the clinic’s orders.</li>
-</ul>
+    <h3>Qué se controla normalmente</h3>
+    <ul>
+      <li><strong>Riñón y electrolitos:</strong> creatinina/eGFR, BUN, potasio, sodio, bicarbonato, magnesio, fósforo.</li>
+      <li><strong>Sangre y orina:</strong> biometría hemática (CBC), examen de orina, relación proteína/creatinina en orina.</li>
+      <li><strong>Nivel del fármaco:</strong> valle de tacrolimus/inhibidor de calcineurina (tomado antes de la dosis).</li>
+      <li><strong>Metabólico:</strong> registros de presión, peso, lípidos (periódicos), A1c si la glucosa sube.</li>
+      <li><strong>Vigilancia de infecciones:</strong> muchos centros revisan el virus BK con regularidad el primer año; el control de CMV depende del riesgo y la medicación.</li>
+    </ul>
 
-<h2>Incision &amp; devices</h2>
-<ul>
-  <li><strong>Wound care:</strong> keep clean/dry; pat dry after showers. Watch for spreading redness, warmth, worsening pain, drainage, or odor.</li>
-  <li><strong>Ureteral stent:</strong> often removed in a clinic procedure around 2–6 weeks—your team will schedule it.</li>
-  <li><strong>JP drain (bulb drain):</strong> not everyone has one. It removes fluid from the surgery area. Keep the bulb compressed, empty as instructed, and log amounts. Secure with tape/safety pin so it doesn’t tug. Removal is usually when output is low and light. Call for cloudy/bloody output that increases, foul smell, or redness spreading along the drain site.</li>
-  <li><strong>Wound vacuum (“wound vac”):</strong> sometimes used to help a difficult incision heal. Keep the pump on (24/7 unless told otherwise), charge the battery, and check the dressing seal (no constant hissing). Dressing changes are done by clinic/home health every few days. Call for continuous alarms, loss of seal, heavy drainage/bleeding, worsening pain, or foul odor.</li>
-  <li><strong>Pain meds:</strong> use stool softeners with narcotics; transition to acetaminophen if approved. Avoid NSAIDs unless your team says otherwise.</li>
-</ul>
+    <h2>Conceptos básicos de la inmunosupresión</h2>
+    <ul>
+      <li><strong>La hora también es medicina:</strong> toma los antirrechazo a tiempo, siempre. Pon alarmas. Si te retrasas o faltas a una dosis, no la dupliques: llama para instrucciones.</li>
+      <li><strong>Análisis de valle:</strong> para medir niveles, hazte la extracción <em>antes</em> de la dosis matutina y lleva la hora exacta de la última toma.</li>
+      <li><strong>Interacciones:</strong> consulta antes de nuevas recetas, <em>OTC</em> o suplementos. Algunos antibióticos/antifúngicos, antiepilépticos y ciertos cítricos (p. ej., toronja/pomelo, naranja de Sevilla) alteran niveles.</li>
+      <li><strong>Vacunas:</strong> mantente al día con vacunas no vivas (gripe, COVID, etc.). Las vivas suelen evitarse—confírmalo con tu equipo.</li>
+      <li><strong>No ajustes por tu cuenta:</strong> nunca cambies dosis sin indicación de la clínica.</li>
+    </ul>
 
+    <h2>Incisión y dispositivos</h2>
+    <ul>
+      <li><strong>Cuidado de la herida:</strong> mantén limpia y seca; seca a toques tras la ducha. Vigila enrojecimiento que se expande, calor, dolor en aumento, secreción u olor.</li>
+      <li><strong>Stent ureteral:</strong> suele retirarse en consulta alrededor de las 2–6 semanas—tu equipo lo programará.</li>
+      <li><strong>Drenaje JP (de bulbo):</strong> no todas las personas lo llevan. Retira líquido del área quirúrgica. Mantén el bulbo comprimido, vacía según instrucciones y anota volúmenes. Sujétalo con cinta/imperdible para que no tire. Se retira cuando el gasto es bajo y claro. Llama si el líquido se vuelve turbio/con sangre y aumenta, huele mal o si el enrojecimiento se extiende alrededor del sitio.</li>
+      <li><strong>Sistema de presión negativa (“wound vac”):</strong> a veces se usa para ayudar a cicatrizar. Mantén la bomba encendida (24/7 salvo indicación), carga la batería y revisa el sello del apósito (sin silbido constante). Los cambios los hace la clínica/enfermería a domicilio cada pocos días. Llama por alarmas continuas, pérdida de sello, drenaje abundante/sangrado, dolor en aumento u olor fuerte.</li>
+      <li><strong>Analgésicos:</strong> usa ablandadores de heces con opioides; cambia a acetaminofén/paracetamol si te lo aprueban. Evita AINEs salvo indicación.</li>
+    </ul>
 
-<h2>Activity &amp; return to normal</h2>
-<ul>
-  <li><strong>Lifting:</strong> avoid &gt;10–15 lb and core-straining moves until cleared.</li>
-  <li><strong>Walking:</strong> daily, building up pace and distance; stairs are fine if steady.</li>
-  <li><strong>Driving:</strong> once off narcotics and you can brake/turn safely (confirm with your team).</li>
-  <li><strong>Work &amp; sex:</strong> timing is individualized; ask at follow-up. Many return to desk work by 2–4 weeks.</li>
-  <li><strong>Sun protection:</strong> long-term meds raise skin-cancer risk—use sunscreen, hats, and skin checks.</li>
-</ul>
+    <h2>Actividad y regreso a la normalidad</h2>
+    <ul>
+      <li><strong>Cargas:</strong> evita levantar &gt;10–15 lb (4.5–7 kg) y ejercicios que fuercen el abdomen hasta tener alta.</li>
+      <li><strong>Caminar:</strong> a diario, aumentando ritmo y distancia; subir escaleras está bien si te sientes firme.</li>
+      <li><strong>Conducir:</strong> cuando ya no tomes narcóticos y puedas frenar/girar con seguridad (confírmalo con tu equipo).</li>
+      <li><strong>Trabajo y relaciones sexuales:</strong> el momento es individual; pregunta en la consulta. Muchas personas vuelven a trabajo de oficina en 2–4 semanas.</li>
+      <li><strong>Protección solar:</strong> los fármacos elevan el riesgo de cáncer de piel—usa protector, sombrero y revisiones cutáneas.</li>
+    </ul>
 
-<h2>Food, fluids, and sleep</h2>
-<ul>
-  <li><strong>Hydration:</strong> steady fluids unless told otherwise; aim for pale-yellow urine and follow your clinic’s target.</li>
-  <li><strong>Meals:</strong> balanced, lower-sodium to help blood pressure. Small frequent meals are fine if appetite is off.</li>
-  <li><strong>Food safety:</strong> cook meats/eggs fully, rinse produce, avoid unpasteurized items.</li>
-  <li><strong>Blood sugar:</strong> steroids can raise glucose—simple, sustainable adjustments help; your team will guide you.</li>
-  <li><strong>Sleep:</strong> short naps are okay early on; anchor a regular bedtime as energy returns.</li>
-</ul>
+    <h2>Alimentación, líquidos y sueño</h2>
+    <ul>
+      <li><strong>Hidratación:</strong> líquidos constantes salvo indicación contraria; apunta a orina amarillo pálido y sigue la meta de tu clínica.</li>
+      <li><strong>Comidas:</strong> equilibradas, más bajas en sodio para ayudar a la presión. Si hay poca apetencia, comidas pequeñas y frecuentes.</li>
+      <li><strong>Seguridad alimentaria:</strong> cocina bien carnes y huevos, enjuaga frutas/verduras, evita productos no pasteurizados.</li>
+      <li><strong>Glucosa:</strong> los esteroides pueden elevarla—ajustes simples y sostenibles ayudan; tu equipo te guiará.</li>
+      <li><strong>Sueño:</strong> siestas cortas están bien al inicio; fija una hora de dormir regular conforme regresa la energía.</li>
+    </ul>
 
-<h2>Bladder &amp; bathroom changes</h2>
-<ul>
-  <li><strong>Frequent urination is common early on.</strong> After dialysis, the bladder can be “out of practice” and smaller. As the new kidney wakes up, you may pee often—especially at night—and the bladder gradually stretches back.</li>
-  <li><strong>Nighttime routine:</strong> keep a bedside urinal (or commode), a small light or motion-sensor night light, and a clear path to reduce fall risk. Consider an absorbent pad on the mattress for peace of mind.</li>
-  <li><strong>Fluids:</strong> meet your clinic’s hydration target, but avoid big fluid boluses late in the evening if you’re up all night—ask your team how to time intake for you.</li>
-  <li><strong>Med timing:</strong> if you’re on diuretics, ask whether earlier dosing could help with nocturnal trips.</li>
-  <li><strong>Call your team promptly</strong> for burning with urination, fever, pelvic or flank pain, blood in urine that doesn’t quickly clear, inability to pee for 6–8 hours, or a sudden drop in urine output.</li>
-</ul>
+    <h2>Vejiga y cambios al ir al baño</h2>
+    <ul>
+      <li><strong>Orinar con frecuencia es común al principio.</strong> Tras la diálisis, la vejiga puede estar “fuera de práctica” y más pequeña. Al “despertar” el riñón nuevo, puedes orinar seguido—sobre todo de noche—y la vejiga se va estirando de nuevo.</li>
+      <li><strong>Rutina nocturna:</strong> ten un orinal de cabecera (o silla-orinal), una luz pequeña o con sensor de movimiento y un camino despejado para evitar caídas. Considera un protector absorbente en el colchón para mayor tranquilidad.</li>
+      <li><strong>Líquidos:</strong> cumple la meta de hidratación, pero evita grandes tomas tarde por la noche si no duermes—pregunta cómo repartirlos.</li>
+      <li><strong>Horario de diuréticos:</strong> si tomas diuréticos, pregunta si dosis más tempranas ayudarían con los viajes nocturnos al baño.</li>
+      <li><strong>Llama pronto</strong> si hay ardor al orinar, fiebre, dolor pélvico o en costado, sangre en orina que no cede, imposibilidad de orinar durante 6–8 horas o una caída brusca del volumen de orina.</li>
+    </ul>
 
+    <h2>Vigilancia en casa</h2>
+    <ul>
+      <li>Registra <strong>presión arterial</strong>, <strong>peso</strong>, <strong>temperatura</strong> y cualquier <strong>síntoma nuevo</strong>.</li>
+      <li>Anota <strong>horarios de medicación</strong> y lleva tu registro a consulta. La constancia ayuda a detectar tendencias.</li>
+      <li>Si te atienden fuera de tu clínica de trasplante (urgencias/ER), menciona que eres trasplantado/a y avisa después a tu equipo.</li>
+    </ul>
 
-<h2>Home monitoring</h2>
-<ul>
-  <li>Track <strong>blood pressure</strong>, <strong>weight</strong>, <strong>temperature</strong>, and any <strong>new symptoms</strong>.</li>
-  <li>Note <strong>med times</strong> and bring your log to clinic. Consistency helps spot trends fast.</li>
-  <li>If you’re seen outside your transplant clinic (ER/urgent care), tell them you’re a transplant recipient and notify your team after.</li>
-</ul>
+    <h2>Cuándo llamar</h2>
+    <ul>
+      <li><strong>Llama pronto a tu clínica:</strong> fiebre &gt; 100.4–101&nbsp;°F (≈38–38.3&nbsp;°C), escalofríos, vómitos que impiden tomar medicación, dolor nuevo o en aumento sobre el riñón, menos orina, aumento brusco de peso o hinchazón, enrojecimiento que se extiende en la incisión.</li>
+      <li><strong>Llama al 911 / acude a urgencias:</strong> dolor en el pecho, dificultad para respirar, dolor/hinchazón en una sola pierna, deshidratación grave/confusión, síntomas tipo ictus.</li>
+    </ul>
 
-<h2>When to call</h2>
-<ul>
-  <li><strong>Call your clinic promptly:</strong> fever &gt; 100.4–101°F, chills, vomiting that prevents meds, new/worsening pain over the kidney, less urine, sudden weight gain or swelling, spreading redness at the incision.</li>
-  <li><strong>Call 911 / go to ER:</strong> chest pain, trouble breathing, one-sided leg swelling/pain, severe dehydration/confusion, stroke-like symptoms.</li>
-</ul>
+    <div class="callout">
+      <p><strong>Preguntas para tu equipo:</strong> ¿Cuál es mi frecuencia actual de análisis/visitas? ¿Cuáles son mis síntomas de “llamar ahora”? ¿Qué fármacos o alimentos pueden alterar mis niveles? ¿Cuándo puedo levantar peso, conducir y volver al trabajo?</p>
+    </div>
 
-<div class="callout">
-  <p><strong>Questions to ask:</strong> What’s my current lab/visit cadence? What are my “call now” symptoms? Which meds or foods can change my levels? When can I lift, drive, and return to work?</p>
-</div>
-
-<p class="disclaimer">This page is educational and can’t cover every case. Follow your team’s specific instructions.</p>
-
-
-
+    <p class="disclaimer">Esta página es educativa y no puede cubrir todos los casos. Sigue las indicaciones específicas de tu equipo.</p>
 
   </main>
   <div data-include="/includes_es/footer.html"></div>
