--- a/es/hub/transplant/preop/evaluation.html
+++ b/es/hub/transplant/preop/evaluation.html
@@ -12,7 +12,8 @@
   </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Evaluation for Transplant - Kidney Transplant Hub</title>
+  <title>Preoperatorio: Evaluación y Pruebas — Centro de Trasplante Renal</title>
+  <meta name="description" content="Qué incluye la evaluación preoperatoria para un trasplante de riñón: análisis, compatibilidad, estudios cardiopulmonares e imagen, y cómo prepararte." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
@@ -24,34 +25,43 @@
   <div data-include="/includes_es/header.html"></div>
   <main class="content" id="main">
     <div data-include="/includes_es/transplant-subnav.html"></div>
-<h1>Pre-Op: Evaluation &amp; Testing</h1>
-<p>The evaluation checks that surgery is safe for you and that the kidney match is sound. Some tests happen locally; others at the transplant center.</p>
+    <div data-include="/includes_es/transplant-preop-subnav.html"></div>
 
-<h2>Core pieces</h2>
-<ul>
-  <li><strong>Labs:</strong> blood count, kidney/liver function, electrolytes, A1c, lipids, infectious-disease screening.</li>
-  <li><strong>Typing &amp; antibodies:</strong> blood type, HLA typing, and antibody screen (cPRA).</li>
-  <li><strong>Crossmatch:</strong> mixes your blood with the donor’s to see if it reacts.</li>
-  <li><strong>Heart &amp; lungs:</strong> EKG; echo and/or stress test as needed; chest X-ray.</li>
-  <li><strong>Imaging:</strong> abdominal ultrasound or CT as needed; vessels evaluated for surgery planning.</li>
-  <li><strong>Dental &amp; cancer screening:</strong> clear untreated infections; complete age-appropriate screenings.</li>
-  <li><strong>Consults:</strong> nephrologist, surgeon (pre-op visit), pharmacist/med ed, social worker, dietitian; sometimes anesthesia.</li>
-</ul>
+    <h1>Preoperatorio: Evaluación y Pruebas</h1>
+    <p>
+      La evaluación confirma que la cirugía sea segura para ti y que la compatibilidad del riñón sea adecuada.
+      Algunas pruebas se hacen cerca de tu casa; otras en el centro de trasplante.
+    </p>
 
-<h2>Timeline</h2>
-<p>Many centers complete work-up in 1–3 months; complex findings can add time. Ask which tests you can do locally.</p>
+    <h2>Componentes principales</h2>
+    <ul>
+      <li><strong>Análisis:</strong> hemograma, función renal/hepática, electrolitos, A1c, lípidos y cribado de infecciones.</li>
+      <li><strong>Tipaje y anticuerpos:</strong> grupo sanguíneo, tipaje HLA y detección de anticuerpos (cPRA).</li>
+      <li><strong>Prueba cruzada (crossmatch):</strong> mezcla tu sangre con la del donante para ver si hay reacción.</li>
+      <li><strong>Corazón y pulmones:</strong> ECG; ecocardiograma y/o prueba de esfuerzo según necesidad; radiografía de tórax.</li>
+      <li><strong>Imagen:</strong> ecografía abdominal o TC según el caso; evaluación de vasos para planificar la cirugía.</li>
+      <li><strong>Odontología y cribado oncológico:</strong> tratar infecciones dentales activas; completar cribados por edad.</li>
+      <li><strong>Consultas:</strong> nefrólogo, cirujano (visita preop), farmacéutico/educación de medicación, trabajador social y dietista; a veces anestesia.</li>
+    </ul>
 
-<h2>How to prepare</h2>
-<ul>
-  <li>Bring medication list with exact times you take them.</li>
-  <li>List past surgeries, allergies, and any devices (stents, ports).</li>
-  <li>Home logs: blood pressure, weight, blood sugars (if applicable).</li>
-</ul>
+    <h2>Cronograma</h2>
+    <p>
+      Muchos centros completan el estudio en <strong>1–3 meses</strong>; hallazgos complejos pueden añadir tiempo.
+      Pregunta qué pruebas puedes hacer localmente.
+    </p>
 
-<div class="callout"><p><strong>Questions to ask:</strong> What’s still pending? What would delay my clearance? Can any tests be bundled in one day?</p></div>
+    <h2>Cómo prepararte</h2>
+    <ul>
+      <li>Lleva una <strong>lista de medicamentos</strong> con los horarios exactos.</li>
+      <li>Anota cirugías previas, alergias y dispositivos (stents, puertos, etc.).</li>
+      <li>Registros en casa: presión arterial, peso y glucemias (si aplica).</li>
+    </ul>
 
-<p class="disclaimer">Informational only; testing varies by center and your health history.</p>
+    <div class="callout">
+      <p><strong>Preguntas para hacer:</strong> ¿Qué sigue pendiente? ¿Qué podría retrasar mi autorización? ¿Podemos agrupar pruebas en un solo día?</p>
+    </div>
 
+    <p class="disclaimer">Contenido informativo; las pruebas varían según el centro y tu historia clínica.</p>
   </main>
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
