--- a/es/hub/transplant/preop/matching.html
+++ b/es/hub/transplant/preop/matching.html
@@ -12,7 +12,8 @@
   </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Matching Process - Kidney Transplant Hub</title>
+  <title>Compatibilidad y búsqueda de donante - Trasplante de riñón</title>
+  <meta name="description" content="Cómo funciona la compatibilidad para trasplante: grupo sanguíneo, HLA, cPRA y crossmatch; vías para obtener un riñón (lista de espera, donante vivo, intercambio pareado)." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
@@ -24,35 +25,42 @@
   <div data-include="/includes_es/header.html"></div>
   <main class="content" id="main">
     <div data-include="/includes_es/transplant-subnav.html"></div>
-<h1>Pre-Op: Finding a Donor &amp; Matching</h1>
-<p>Matching aims to lower rejection risk and get you a kidney that works well long-term. A “perfect” match isn’t required, but some combinations are safer.</p>
+    <div data-include="/includes_es/transplant-preop-subnav.html"></div>
 
-<h2>The pieces of a match</h2>
-<ul>
-  <li><strong>Blood type:</strong> some pairs are compatible; incompatible may still be possible with programs or special protocols.</li>
-  <li><strong>HLA typing:</strong> compares immune markers from you and the donor.</li>
-  <li><strong>cPRA (antibodies):</strong> higher numbers mean you react to more potential donors; centers use strategies to expand options.</li>
-  <li><strong>Crossmatch:</strong> final check that your blood does not attack the donor cells.</li>
-</ul>
+    <h1>Preoperatorio: Búsqueda de donante y compatibilidad</h1>
+    <p>
+      La compatibilidad busca reducir el riesgo de rechazo y conseguir un riñón que funcione bien a largo plazo.
+      No se necesita una “compatibilidad perfecta”, pero algunas combinaciones son más seguras que otras.
+    </p>
 
-<h2>Paths to a kidney</h2>
-<ul>
-  <li><strong>Deceased-donor waitlist:</strong> based on medical factors and waiting time; keep contact info current.</li>
-  <li><strong>Living donor:</strong> best outcomes, shorter wait. Can be related or unrelated.</li>
-  <li><strong>Paired exchange (swap):</strong> if your donor isn’t compatible with you, you match with another pair.</li>
-</ul>
+    <h2>Elementos de la compatibilidad</h2>
+    <ul>
+      <li><strong>Grupo sanguíneo:</strong> algunas parejas son compatibles; si no, puede haber opciones con programas o protocolos especiales.</li>
+      <li><strong>Tipificación HLA:</strong> compara marcadores inmunitarios tuyos y del donante.</li>
+      <li><strong>cPRA (anticuerpos):</strong> cuanto más alto, más donantes potenciales rechaza tu sistema inmune; los centros usan estrategias para ampliar opciones.</li>
+      <li><strong><em>Crossmatch</em> (prueba de compatibilidad):</strong> verificación final de que tu sangre no ataca las células del donante.</li>
+    </ul>
 
-<h2>If you’re highly sensitized</h2>
-<ul>
-  <li>More screening and special matching; paired exchange can help.</li>
-  <li>Some centers use protocols to lower antibodies; risks/benefits are individualized.</li>
-</ul>
+    <h2>Vías para conseguir un riñón</h2>
+    <ul>
+      <li><strong>Lista de espera (donante fallecido):</strong> según criterios médicos y tiempo en lista; mantén tus datos de contacto al día.</li>
+      <li><strong>Donante vivo:</strong> mejores resultados y menos espera. Puede ser familiar o no.</li>
+      <li><strong>Intercambio pareado:</strong> si tu donante no es compatible contigo, podéis “intercambiaros” con otra pareja compatible.</li>
+    </ul>
 
-<div class="callout"><p><strong>Questions to ask:</strong> What’s my blood type and cPRA? Am I eligible for paired exchange? How will I be contacted for an offer?</p></div>
+    <h2>Si estás muy sensibilizado/a</h2>
+    <ul>
+      <li>Se requiere más cribado y compatibilidad específica; el intercambio pareado puede ayudar.</li>
+      <li>Algunos centros emplean protocolos para disminuir anticuerpos; los riesgos y beneficios se individualizan.</li>
+    </ul>
 
-<p class="disclaimer">Informational only; matching policies vary by region and center.</p>
+    <div class="callout">
+      <p><strong>Preguntas para hacer:</strong> ¿Cuál es mi grupo sanguíneo y mi cPRA? ¿Soy elegible para intercambio pareado? ¿Cómo me avisarán si hay una oferta?</p>
+    </div>
 
+    <p class="disclaimer">Información general; las políticas de compatibilidad varían según la región y el centro.</p>
   </main>
+
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
