--- a/es/hub/transplant/preop/risks.html
+++ b/es/hub/transplant/preop/risks.html
@@ -12,7 +12,8 @@
   </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Transplant Staff - Kidney Transplant Hub</title>
+  <title>Preoperatorio: Riesgos y consideraciones — Trasplante de riñón</title>
+  <meta name="description" content="Riesgos del trasplante antes y después de la cirugía, efectos de la anestesia e inmunosupresión, y cómo el equipo reduce esos riesgos con controles y ajustes." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
@@ -24,41 +25,48 @@
   <div data-include="/includes_es/header.html"></div>
   <main class="content" id="main">
     <div data-include="/includes_es/transplant-subnav.html"></div>
-<h1>Pre-Op: Risks &amp; Considerations</h1>
-<p>Transplant offers better survival and quality of life for many people, but surgery and the medicines afterward have risks. Your team works to lower them.</p>
+    <div data-include="/includes_es/transplant-preop-subnav.html"></div>
 
-<h2>Surgical &amp; immediate risks</h2>
-<ul>
-  <li>Bleeding, infection, blood clots.</li>
-  <li>Anesthesia complications (rare, individualized risk).</li>
-  <li><strong>Delayed graft function:</strong> kidney is slow to wake up; may need dialysis briefly.</li>
-  <li>Urine/ureter issues that sometimes need a procedure to fix.</li>
-</ul>
+    <h1>Preoperatorio: Riesgos y consideraciones</h1>
+    <p>
+      El trasplante ofrece mejor supervivencia y calidad de vida para muchas personas, pero la cirugía
+      y las medicinas posteriores tienen riesgos. Tu equipo trabaja para minimizarlos y adaptarlos a tu caso.
+    </p>
 
-<h2>Early after surgery</h2>
-<ul>
-  <li>Higher infection risk while doses are strong.</li>
-  <li>Medication side effects (blood pressure, blood sugar, electrolytes).</li>
-</ul>
+    <h2>Riesgos quirúrgicos e inmediatos</h2>
+    <ul>
+      <li>Sangrado, infección, coágulos.</li>
+      <li>Complicaciones de anestesia (raras; el riesgo es individual).</li>
+      <li><strong>Función retardada del injerto:</strong> el riñón tarda en “despertar”; a veces se necesita hemodiálisis temporal.</li>
+      <li>Problemas urinarios/ureterales que a veces requieren un procedimiento para corregirlos.</li>
+    </ul>
 
-<h2>Longer-term considerations</h2>
-<ul>
-  <li>Chronic rejection risk over years; requires steady follow-up.</li>
-  <li>Skin cancer risk is higher—sun protection and dermatology checks matter.</li>
-</ul>
+    <h2>Primeros días tras la cirugía</h2>
+    <ul>
+      <li>Mayor riesgo de infecciones mientras las dosis de inmunosupresión son altas.</li>
+      <li>Efectos de medicamentos (presión arterial, azúcar, electrolitos).</li>
+    </ul>
 
-<h2>How risk is reduced</h2>
-<ul>
-  <li>Careful screening and matching.</li>
-  <li>Antibiotics/antivirals when needed; vaccine planning.</li>
-  <li>Close labs and dose adjustments tailored to you.</li>
-</ul>
+    <h2>Consideraciones a largo plazo</h2>
+    <ul>
+      <li>Riesgo de rechazo crónico con los años; seguimiento constante.</li>
+      <li>Mayor riesgo de cáncer de piel: protección solar y controles dermatológicos.</li>
+    </ul>
 
-<div class="callout"><p><strong>Questions to ask:</strong> What are <em>my</em> biggest risks? What warning signs should I watch for at home? How often will labs be checked early on?</p></div>
+    <h2>Cómo se reducen los riesgos</h2>
+    <ul>
+      <li>Cribado y compatibilidad cuidadosos.</li>
+      <li>Antibióticos/antivirales cuando corresponda; planificación de vacunas.</li>
+      <li>Controles de laboratorio frecuentes y ajustes de dosis personalizados.</li>
+    </ul>
 
-<p class="disclaimer">Educational info—not medical advice. Your team will personalize risk and prevention.</p>
+    <div class="callout">
+      <p><strong>Preguntas para hacer:</strong> ¿Cuáles son <em>mis</em> mayores riesgos? ¿Qué señales de alarma debo vigilar en casa? ¿Con qué frecuencia revisaréis mis análisis al principio?</p>
+    </div>
 
+    <p class="disclaimer">Información educativa; no sustituye el consejo médico. Tu equipo personalizará la prevención y el plan de seguimiento.</p>
   </main>
+
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
