--- a/es/hub/transplant/surgery/surgery.html
+++ b/es/hub/transplant/surgery/surgery.html
@@ -12,7 +12,9 @@
   </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Transplant Surgery - Kidney Transplant Hub</title>
+  <title>Cirugía de trasplante — Centro de Trasplante Renal</title>
+  <meta name="description" content="Cómo se realiza la cirugía de trasplante de riñón, qué dispositivos puedes tener al despertar, duración típica y qué ocurre inmediatamente después." />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
@@ -24,98 +26,96 @@
   <div data-include="/includes_es/header.html"></div>
   <main class="content" id="main">
     <div data-include="/includes_es/transplant-subnav.html"></div>
-<div data-include="/includes_es/transplant-surgery-subnav.html"></div>
+    <div data-include="/includes_es/transplant-surgery-subnav.html"></div>
 
-<h1>The Transplant Surgery</h1>
-<p>
-  Most kidney transplants take a few hours. The new kidney is placed low in the abdomen and connected to nearby blood vessels and the bladder. 
-  In most cases your own kidneys stay in place.
-</p>
+    <h1>La cirugía de trasplante</h1>
+    <p>
+      La mayoría de los trasplantes de riñón duran unas pocas horas. El riñón nuevo se coloca en la parte baja del abdomen y
+      se conecta a los vasos sanguíneos cercanos y a la vejiga. En la mayoría de los casos, tus riñones propios se dejan en su sitio.
+    </p>
 
-<h2>Before the OR (check-in & prep)</h2>
-<ul>
-  <li>Confirm consent, allergies, and last dialysis/meds; surgical site is marked.</li>
-  <li>IV started; antibiotics and other pre-op medicines are given.</li>
-  <li>Immunosuppression is started per your center’s plan (some doses before, during, or right after surgery).</li>
-</ul>
+    <h2>Antes del quirófano (ingreso y preparación)</h2>
+    <ul>
+      <li>Se confirman el consentimiento, alergias y última diálisis/medicación; se marca el sitio quirúrgico.</li>
+      <li>Se canaliza una vía IV; se administran antibióticos y otros fármacos preoperatorios.</li>
+      <li>La inmunosupresión se inicia según el plan del centro (algunas dosis antes, durante o justo después de la cirugía).</li>
+    </ul>
 
-<h2>Anesthesia</h2>
-<ul>
-  <li>General anesthesia (fully asleep) with a breathing tube; monitoring lines are placed.</li>
-  <li>You won’t feel or remember the procedure; nausea prevention is routine.</li>
-</ul>
+    <h2>Anestesia</h2>
+    <ul>
+      <li>Anestesia general (completamente dormido) con tubo respiratorio; se colocan líneas de monitorización.</li>
+      <li>No sentirás ni recordarás el procedimiento; la prevención de náuseas es rutina.</li>
+    </ul>
 
-<h2>What the surgeon does</h2>
-<ul>
-  <li>Makes an incision in the lower abdomen (right or left, based on your anatomy and vessels).</li>
-  <li>Connects the kidney vein and artery to blood vessels in your pelvis so blood flows through the new kidney.</li>
-  <li>Connects the ureter (kidney tube) to your bladder. A small internal stent is often placed to help healing.</li>
-  <li>Confirms bleeding is controlled and the kidney is well-positioned before closing.</li>
-</ul>
+    <h2>Qué hace el cirujano</h2>
+    <ul>
+      <li>Realiza una incisión en la parte inferior del abdomen (derecha o izquierda, según tu anatomía y vasos).</li>
+      <li>Conecta la vena y arteria del riñón a vasos de la pelvis para que la sangre fluya por el nuevo riñón.</li>
+      <li>Conecta el uréter (tubo del riñón) a la vejiga. A menudo se coloca un pequeño <em>stent</em> interno para ayudar a la cicatrización.</li>
+      <li>Confirma que el sangrado está controlado y que el riñón queda bien posicionado antes de cerrar.</li>
+    </ul>
 
-<h2>Lines & devices you may wake up with</h2>
-<ul>
-  <li><strong>Foley catheter:</strong> drains urine; usually removed a few days after surgery.</li>
-  <li><strong>Ureteral stent (internal):</strong> removed in clinic later (often 2–6 weeks).</li>
-  <li><strong>IV lines:</strong> for fluids and medicines; sometimes a wrist arterial line for close BP checks.</li>
-  <li><strong>JP drain (bulb):</strong> not always used; collects fluid near the incision, removed when output is low/light.</li>
-  <li><strong>Wound vacuum:</strong> occasionally used to help a difficult incision heal; dressing changes are scheduled.</li>
-</ul>
+    <h2>Líneas y dispositivos con los que podrías despertar</h2>
+    <ul>
+      <li><strong>Sonda Foley:</strong> drena la orina; suele retirarse a los pocos días.</li>
+      <li><strong>Stent ureteral (interno):</strong> se retira más adelante en consulta (a menudo entre 2 y 6 semanas).</li>
+      <li><strong>Vías IV:</strong> para líquidos y fármacos; a veces una línea arterial en la muñeca para control estrecho de la PA.</li>
+      <li><strong>Drenaje JP (bulbo):</strong> no siempre se usa; recoge líquido cercano a la incisión, se retira cuando el débito es bajo y claro.</li>
+      <li><strong>Vacío de herida:</strong> ocasional, para ayudar a cicatrizar; se programan los cambios de apósito.</li>
+    </ul>
 
-<h2>How long it takes</h2>
-<ul>
-  <li><strong>Living-donor kidneys:</strong> often ~2–3.5 hours.</li>
-  <li><strong>Deceased-donor kidneys:</strong> can be longer depending on timing and complexity.</li>
-  <li>Prior surgeries, body habitus, vessel anatomy, and scar tissue can add time. Longer does not automatically mean something went wrong.</li>
-</ul>
+    <h2>Cuánto dura</h2>
+    <ul>
+      <li><strong>Riñón de donante vivo:</strong> a menudo ~2–3.5 horas.</li>
+      <li><strong>Riñón de donante fallecido:</strong> puede ser más largo según tiempos y complejidad.</li>
+      <li>Cirugías previas, complexión, anatomía vascular y cicatrices pueden añadir tiempo. Que dure más no significa que algo haya ido mal.</li>
+    </ul>
 
-<h2>Right after surgery (PACU → surgical floor)</h2>
-<ul>
-  <li>You’ll wake in recovery; pain and nausea are treated right away.</li>
-  <li>Urine may start immediately or take time—especially with deceased-donor kidneys. Lab checks begin day one.</li>
-  <li>Fluids and blood pressure are adjusted to support the kidney. Early walking starts with help.</li>
-</ul>
+    <h2>Justo después (URPA → planta quirúrgica)</h2>
+    <ul>
+      <li>Despertarás en recuperación; el dolor y la náusea se tratan de inmediato.</li>
+      <li>La orina puede empezar enseguida o tardar—sobre todo con donante fallecido. Los análisis comienzan el primer día.</li>
+      <li>Se ajustan líquidos y presión arterial para apoyar al riñón. La deambulación temprana inicia con ayuda.</li>
+    </ul>
 
-<h2>Pain plan & nausea</h2>
-<ul>
-  <li>Multimodal pain control (combining methods) is typical; some centers use a patient-controlled pump early on.</li>
-  <li>Stool softeners with opioids; switch to acetaminophen when possible. Avoid NSAIDs unless your team says otherwise.</li>
-  <li>Antinausea meds are available—ask early so you can keep medicines down.</li>
-</ul>
+    <h2>Dolor y náuseas</h2>
+    <ul>
+      <li>Control multimodal del dolor (combinando métodos) es lo típico; algunos centros usan bomba controlada por el paciente al principio.</li>
+      <li>Ablandadores con opioides; cambiar a paracetamol cuando sea posible. Evitar AINEs salvo indicación del equipo.</li>
+      <li>Hay antieméticos disponibles: pídelos temprano para poder mantener los medicamentos.</li>
+    </ul>
 
-<h2>When plans differ</h2>
-<ul>
-  <li><strong>Delayed graft function:</strong> the kidney is slow to “wake up.” Short-term dialysis may be needed while recovery continues.</li>
-  <li><strong>Additional procedures:</strong> urine leaks/strictures or bleeding may require a procedure; your team will explain if this happens.</li>
-</ul>
+    <h2>Cuando el plan cambia</h2>
+    <ul>
+      <li><strong>Función retardada del injerto:</strong> el riñón tarda en “despertar”. Puede requerirse diálisis temporal mientras avanza la recuperación.</li>
+      <li><strong>Procedimientos adicionales:</strong> fugas/estrecheces urinarias o sangrado pueden requerir intervención; el equipo te lo explicará si ocurre.</li>
+    </ul>
 
-<h2>Family updates</h2>
-<ul>
-  <li>The team usually gives an update after the operation and again once you’re settled in recovery or your room.</li>
-</ul>
+    <h2>Actualizaciones a la familia</h2>
+    <ul>
+      <li>El equipo suele informar tras la operación y de nuevo cuando estés estable en recuperación o en tu habitación.</li>
+    </ul>
 
-<h2>Risks (brief)</h2>
-<ul>
-  <li>Bleeding, clots, wound issues; urine leak or narrowing; infections; and rejection risk later. Your team works to reduce these.</li>
-</ul>
-<p>Read more: <a href="/es/hub/transplant/postop/complications.html" data-evt="surgery:to-complications">Post-Op Complications</a></p>
+    <h2>Riesgos (breve)</h2>
+    <ul>
+      <li>Sangrado, coágulos, problemas de herida; fuga urinaria o estrechez; infecciones; y riesgo de rechazo más adelante. Tu equipo trabaja para reducirlos.</li>
+    </ul>
+    <p>Lee más: <a href="/es/hub/transplant/postop/complications.html" data-evt="surgery:to-complications">Complicaciones postoperatorias</a></p>
 
-<h2>What to bring / tell your team</h2>
-<ul>
-  <li>Photo ID, insurance card, medication list with exact times, and allergy list.</li>
-  <li>CPAP machine if you use one; comfortable walking shoes; phone charger and a short checklist for questions.</li>
-  <li>Tell the team about any blood thinners, recent infections, or last dialysis date/time.</li>
-</ul>
+    <h2>Qué llevar / qué informar</h2>
+    <ul>
+      <li>Identificación, tarjeta de seguro, lista de medicación con horarios exactos y lista de alergias.</li>
+      <li>CPAP si lo usas; calzado cómodo para caminar; cargador y una lista breve de preguntas.</li>
+      <li>Informa sobre anticoagulantes, infecciones recientes o fecha/hora de tu última diálisis.</li>
+    </ul>
 
-<div class="callout">
-  <p><strong>Quick facts:</strong> Most people keep their original kidneys. Expect a Foley catheter at first and a bladder stent that’s removed later in clinic. Early walking, steady fluids, and on-time meds help the new kidney thrive.</p>
-</div>
+    <div class="callout">
+      <p><strong>Datos rápidos:</strong> La mayoría mantiene sus riñones originales. Espera sonda Foley al principio y un stent vesical que se retira luego en consulta. Caminar temprano, líquidos estables y medicación a tiempo ayudan a que el injerto prospere.</p>
+    </div>
 
-<p class="disclaimer">This page is educational and can’t cover every case. Your surgical team will personalize the plan for you.</p>
+    <p class="disclaimer">Página educativa; no puede cubrir todos los casos. Tu equipo quirúrgico personalizará el plan para ti.</p>
 
-<p>Next: <a href="/es/hub/transplant/surgery/recovery-inpatient.html" data-evt="surgery:to-recovery-inpatient">In-Hospital Recovery</a> · <a href="/es/hub/transplant/surgery/staff-surgery.html" data-evt="surgery:to-staff">Surgical Staff Roles</a></p>
 
-  </main>
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
