--- a/hub/transplant/preop/evaluation.html
+++ b/hub/transplant/preop/evaluation.html
@@ -2,57 +2,76 @@
 <html lang="en">
 <head>
   <div data-include="/includes/meta.html"></div>
+
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag(){ dataLayer.push(arguments); }
     gtag('js', new Date());
     gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
   </script>
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Evaluation for Transplant - Kidney Transplant Hub</title>
+
+  <title>Pre-Op: Evaluation & Testing — Kidney Transplant Hub</title>
+  <meta name="description" content="What the pre-op evaluation for a kidney transplant includes: labs, matching, heart/lung testing, imaging, and how to prepare." />
+
+  <!-- Fonts & CSS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css" />
+
+  <!-- Site scripts -->
   <script src="/scripts/include.js" defer></script>
   <script src="/scripts/active-link.js" defer></script>
 </head>
 <body>
   <div data-include="/includes/header.html"></div>
+
   <main class="content" id="main">
     <div data-include="/includes/transplant-subnav.html"></div>
-<h1>Pre-Op: Evaluation &amp; Testing</h1>
-<p>The evaluation checks that surgery is safe for you and that the kidney match is sound. Some tests happen locally; others at the transplant center.</p>
+    <div data-include="/includes/transplant-preop-subnav.html"></div>
 
-<h2>Core pieces</h2>
-<ul>
-  <li><strong>Labs:</strong> blood count, kidney/liver function, electrolytes, A1c, lipids, infectious-disease screening.</li>
-  <li><strong>Typing &amp; antibodies:</strong> blood type, HLA typing, and antibody screen (cPRA).</li>
-  <li><strong>Crossmatch:</strong> mixes your blood with the donor’s to see if it reacts.</li>
-  <li><strong>Heart &amp; lungs:</strong> EKG; echo and/or stress test as needed; chest X-ray.</li>
-  <li><strong>Imaging:</strong> abdominal ultrasound or CT as needed; vessels evaluated for surgery planning.</li>
-  <li><strong>Dental &amp; cancer screening:</strong> clear untreated infections; complete age-appropriate screenings.</li>
-  <li><strong>Consults:</strong> nephrologist, surgeon (pre-op visit), pharmacist/med ed, social worker, dietitian; sometimes anesthesia.</li>
-</ul>
+    <h1>Pre-Op: Evaluation &amp; Testing</h1>
+    <p>
+      The evaluation confirms surgery is safe for you and that the donor match is sound.
+      Some tests happen locally; others at the transplant center.
+    </p>
 
-<h2>Timeline</h2>
-<p>Many centers complete work-up in 1–3 months; complex findings can add time. Ask which tests you can do locally.</p>
+    <h2>Core pieces</h2>
+    <ul>
+      <li><strong>Labs:</strong> blood count, kidney/liver function, electrolytes, A1c, lipids, infectious-disease screening.</li>
+      <li><strong>Typing &amp; antibodies:</strong> blood type, HLA typing, and antibody screen (cPRA).</li>
+      <li><strong>Crossmatch:</strong> mixes your blood with the donor’s to see if it reacts.</li>
+      <li><strong>Heart &amp; lungs:</strong> EKG; echo and/or stress test as needed; chest X-ray.</li>
+      <li><strong>Imaging:</strong> abdominal ultrasound or CT as needed; vessels evaluated for surgery planning.</li>
+      <li><strong>Dental &amp; cancer screening:</strong> clear untreated infections; complete age-appropriate screenings.</li>
+      <li><strong>Consults:</strong> nephrologist, surgeon (pre-op visit), pharmacist/med ed, social worker, dietitian; sometimes anesthesia.</li>
+    </ul>
 
-<h2>How to prepare</h2>
-<ul>
-  <li>Bring medication list with exact times you take them.</li>
-  <li>List past surgeries, allergies, and any devices (stents, ports).</li>
-  <li>Home logs: blood pressure, weight, blood sugars (if applicable).</li>
-</ul>
+    <h2>Timeline</h2>
+    <p>
+      Many centers complete the work-up in <strong>1–3 months</strong>; complex findings can add time.
+      Ask which tests you can do locally.
+    </p>
 
-<div class="callout"><p><strong>Questions to ask:</strong> What’s still pending? What would delay my clearance? Can any tests be bundled in one day?</p></div>
+    <h2>How to prepare</h2>
+    <ul>
+      <li>Bring a <strong>medication list</strong> with the exact times you take each one.</li>
+      <li>List past surgeries, allergies, and any devices (stents, ports, etc.).</li>
+      <li>Home logs: blood pressure, weight, and blood sugars (if applicable).</li>
+    </ul>
 
-<p class="disclaimer">Informational only; testing varies by center and your health history.</p>
+    <div class="callout">
+      <p><strong>Questions to ask:</strong> What’s still pending? What could delay my clearance? Can we bundle tests into one day?</p>
+    </div>
 
+    <p class="disclaimer">Informational only; testing varies by center and your health history.</p>
   </main>
+
   <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
