--- a/es/hub/transplant/postop/life-after.html
+++ b/es/hub/transplant/postop/life-after.html
@@ -12,7 +12,8 @@
   </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Life After Transplant - Kidney Transplant Hub</title>
+  <title>Vida después del trasplante — Centro de Trasplante Renal</title>
+  <meta name="description" content="Hábitos clave tras un trasplante de riñón: medicación, vacunas, prevención de infecciones, protección de la piel y objetivos de salud a largo plazo." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
@@ -25,64 +26,65 @@
   <main class="content" id="main">
     <div data-include="/includes_es/transplant-subnav.html"></div>
     <div data-include="/includes_es/transplant-postop-subnav.html"></div>
-<h1>Life After Transplant</h1>
-<p>The goal now is steady habits: take meds on time, show up for labs, move your body, and call early if something feels off. Most people return to full, active lives.</p>
 
-<h2>Anti-rejection medicines (immunosuppression)</h2>
-<p>Most people take 2–3 medicines long-term to prevent the immune system from attacking the kidney.</p>
-<ul>
-  <li><strong>What they do:</strong> lower immune activity enough to protect the kidney while still letting you fight routine infections.</li>
-  <li><strong>How they’re adjusted:</strong> levels are checked with blood tests; doses change over time.</li>
-  <li><strong>Common side effects (varies by person):</strong> tremor, headache, higher blood pressure or sugar, stomach upset/diarrhea, more bruising, mood or sleep changes (especially with steroids).</li>
-  <li><strong>Don’t skip or “self-taper.”</strong> If a dose is late, call the clinic for instructions.</li>
-  <li><strong>Interactions:</strong> some antibiotics, antifungals, seizure meds, and certain citrus (e.g., grapefruit) can change levels—<em>always</em> check before new meds or supplements.</li>
-</ul>
+    <h1>Vida después del trasplante</h1>
+    <p>La meta ahora son hábitos constantes: toma tus medicamentos a tiempo, acude a tus análisis, muévete y llama temprano si algo no va bien. La mayoría de las personas vuelve a una vida plena y activa.</p>
 
-<h2>Infection-smart living</h2>
-<ul>
-  <li>Hand hygiene, especially before eating and after crowds. Masks are reasonable indoors during the early months or outbreaks.</li>
-  <li>Food safety: cook meats/eggs fully; avoid unpasteurized dairy; rinse produce well.</li>
-  <li>Yard/pet care: gloves for gardening/litter; wash hands after.</li>
-</ul>
+    <h2>Medicinas contra el rechazo (inmunosupresión)</h2>
+    <p>La mayoría toma 2–3 fármacos a largo plazo para evitar que el sistema inmunitario ataque el riñón.</p>
+    <ul>
+      <li><strong>Qué hacen:</strong> bajan la actividad inmune lo suficiente para proteger el riñón manteniendo defensa frente a infecciones comunes.</li>
+      <li><strong>Cómo se ajustan:</strong> se controlan con análisis de sangre; las dosis cambian con el tiempo.</li>
+      <li><strong>Efectos secundarios frecuentes (varía):</strong> temblor, dolor de cabeza, presión o azúcar más altos, malestar/diarrea, más moretones, cambios de ánimo o del sueño (sobre todo con esteroides).</li>
+      <li><strong>No saltes dosis ni te “autorreduzcas”.</strong> Si te atrasas, llama a la clínica para instrucciones.</li>
+      <li><strong>Interacciones:</strong> algunos antibióticos, antifúngicos, antiepilépticos y ciertos cítricos (p. ej., toronja/pomelo) alteran niveles—<em>siempre</em> consulta antes de nuevos fármacos o suplementos.</li>
+    </ul>
 
-<h2>Vaccines</h2>
-<ul>
-  <li>Stay up to date on non-live vaccines (e.g., flu, COVID, pneumonia, hepatitis B, shingles [recombinant]).</li>
-  <li><strong>Avoid live vaccines</strong> unless your team specifically approves.</li>
-</ul>
+    <h2>Vida cotidiana con prevención de infecciones</h2>
+    <ul>
+      <li>Higiene de manos, especialmente antes de comer y tras aglomeraciones. Mascarilla en interiores es razonable en los primeros meses o en brotes.</li>
+      <li>Seguridad alimentaria: cocina bien carnes y huevos; evita lácteos no pasteurizados; enjuaga bien frutas y verduras.</li>
+      <li>Jardín/mascotas: usa guantes para jardinería o areneros; lávate las manos después.</li>
+    </ul>
 
-<h2>Skin, sun, and screenings</h2>
-<ul>
-  <li>Transplant medicines raise <strong>skin cancer</strong> risk. Use broad-spectrum sunscreen daily, hats, and long sleeves when practical.</li>
-  <li>See a dermatologist regularly; do routine age-appropriate cancer screening.</li>
-</ul>
+    <h2>Vacunas</h2>
+    <ul>
+      <li>Mantente al día con vacunas <strong>no vivas</strong> (gripe, COVID, neumonía, hepatitis B, herpes zóster recombinante).</li>
+      <li><strong>Evita vacunas vivas</strong> salvo autorización expresa de tu equipo.</li>
+    </ul>
 
-<h2>Daily habits that matter</h2>
-<ul>
-  <li><strong>BP &amp; weight:</strong> keep a home log; high BP is common after transplant.</li>
-  <li><strong>Movement:</strong> aim for 150 minutes/week of moderate activity once cleared.</li>
-  <li><strong>Oral health:</strong> see your dentist; tell them you’ve had a transplant.</li>
-  <li><strong>Alcohol &amp; tobacco:</strong> avoid smoking/vaping; keep alcohol modest and clear with your team.</li>
-</ul>
+    <h2>Piel, sol y cribados</h2>
+    <ul>
+      <li>Los inmunosupresores elevan el riesgo de <strong>cáncer de piel</strong>. Usa protector solar de amplio espectro a diario, sombrero y mangas largas cuando sea posible.</li>
+      <li>Consulta al dermatólogo con regularidad y realiza cribados oncológicos según tu edad.</li>
+    </ul>
 
-<h2>Sex, fertility, and family planning</h2>
-<ul>
-  <li>Fertility often improves after transplant. Many people safely conceive after things are stable; timing and meds should be reviewed with your team.</li>
-  <li>Use reliable contraception until you’ve discussed a plan with the clinic.</li>
-</ul>
+    <h2>Hábitos diarios que importan</h2>
+    <ul>
+      <li><strong>Presión arterial y peso:</strong> lleva registro en casa; la hipertensión es frecuente tras el trasplante.</li>
+      <li><strong>Movimiento:</strong> apunta a 150 minutos/semana de actividad moderada cuando te den el visto bueno.</li>
+      <li><strong>Salud bucal:</strong> visita al dentista e infórmale que eres trasplantado/a.</li>
+      <li><strong>Alcohol y tabaco:</strong> evita fumar/vapear; alcohol con moderación y con el visto bueno del equipo.</li>
+    </ul>
 
-<h2>Work, travel, and life admin</h2>
-<ul>
-  <li><strong>Work:</strong> ramp up as energy returns; request temporary accommodations if needed.</li>
-  <li><strong>Travel:</strong> pack meds in carry-on, bring extra doses, and keep the dosing schedule consistent across time zones.</li>
-  <li>Keep a wallet card or phone note with your transplant date, clinic number, and medication list.</li>
-</ul>
+    <h2>Sexo, fertilidad y planificación familiar</h2>
+    <ul>
+      <li>La fertilidad suele mejorar tras el trasplante. Muchas personas pueden concebir con seguridad cuando todo está estable; revisa tiempos y medicación con tu equipo.</li>
+      <li>Usa anticoncepción fiable hasta acordar un plan con la clínica.</li>
+    </ul>
 
-<div class="callout">
-  <p><strong>Questions to ask:</strong> Which vaccines are due this year? What drug/food interactions should I avoid? What’s my long-term target for blood pressure and labs?</p>
-</div>
+    <h2>Trabajo, viajes y trámites</h2>
+    <ul>
+      <li><strong>Trabajo:</strong> retoma progresivamente según vuelva la energía; pide adaptaciones temporales si las necesitas.</li>
+      <li><strong>Viajes:</strong> lleva la medicación en el equipaje de mano, con dosis extra, y mantén el horario de toma al cruzar husos horarios.</li>
+      <li>Guarda una tarjeta o nota en el teléfono con tu fecha de trasplante, teléfono de la clínica y lista de medicamentos.</li>
+    </ul>
 
-<p class="disclaimer">This page is educational, not medical advice. Your team will tailor medicines and targets to you.</p>
+    <div class="callout">
+      <p><strong>Preguntas para tu equipo:</strong> ¿Qué vacunas me tocan este año? ¿Qué interacciones con fármacos/alimentos debo evitar? ¿Cuál es mi objetivo a largo plazo para presión y analíticas?</p>
+    </div>
+
+    <p class="disclaimer">Esta página es educativa y no sustituye el consejo médico. Tu equipo ajustará medicación y objetivos a tu situación.</p>
 
   </main>
   <div data-include="/includes_es/footer.html"></div>
