--- a/es/hub/transplant/preop/index.html
+++ b/es/hub/transplant/preop/index.html
@@ -2,17 +2,21 @@
 <html lang="es">
 <head>
   <div data-include="/includes_es/meta.html"></div>
+
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag(){ dataLayer.push(arguments); }
     gtag('js', new Date());
     gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
   </script>
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Kidney Transplant Overview</title>
+  <title>Preoperatorio: Preparación para el Trasplante de Riñón</title>
+  <meta name="description" content="Qué sucede antes del trasplante de riñón: evaluación y pruebas, cómo funciona la compatibilidad, riesgos y el equipo que te prepara." />
+
   <!-- Google Fonts: Open Sans -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,38 +27,42 @@
 </head>
 <body>
   <div data-include="/includes_es/header.html"></div>
+
   <main class="content" id="main">
     <div data-include="/includes_es/transplant-subnav.html"></div>
-<div data-include="/includes_es/transplant-preop-subnav.html"></div>
+    <div data-include="/includes_es/transplant-preop-subnav.html"></div>
 
-<h1>Pre-Op: Preparing for Kidney Transplant</h1>
-<p>Before transplant you’ll complete testing, learn how matching works, review risks, and meet the team that gets you ready.</p>
+    <h1>Preoperatorio: Preparación para el Trasplante de Riñón</h1>
+    <p>
+      Antes del trasplante completarás pruebas, aprenderás cómo funciona la compatibilidad,
+      revisarás los riesgos y conocerás al equipo que te prepara para la cirugía.
+    </p>
 
-<section class="testimonial-summary">
-  <h2><a href="/es/hub/transplant/preop/evaluation.html" data-evt="preop:evaluation">Evaluation &amp; Testing</a></h2>
-  <p>Labs, heart and lung checks, imaging, and consults to be sure surgery is safe and the match is right.</p>
-</section>
+    <section class="testimonial-summary">
+      <h2><a href="/es/hub/transplant/preop/evaluation.html" data-evt="preop:evaluation">Evaluación y pruebas</a></h2>
+      <p>Análisis, revisiones de corazón y pulmones, estudios de imagen y consultas para asegurar que la cirugía sea segura y la compatibilidad adecuada.</p>
+    </section>
 
-<section class="testimonial-summary">
-  <h2><a href="/es/hub/transplant/preop/matching.html" data-evt="preop:matching">Finding a Donor</a></h2>
-  <p>Blood type, HLA typing, crossmatch, waitlist basics, and paired-exchange options.</p>
-</section>
+    <section class="testimonial-summary">
+      <h2><a href="/es/hub/transplant/preop/matching.html" data-evt="preop:matching">Encontrar un donante</a></h2>
+      <p>Grupo sanguíneo, tipificación HLA, <em>crossmatch</em> (prueba de compatibilidad), conceptos básicos de la lista de espera y opciones de intercambio pareado.</p>
+    </section>
 
-<section class="testimonial-summary">
-  <h2><a href="/es/hub/transplant/preop/risks.html" data-evt="preop:risks">Risks &amp; Considerations</a></h2>
-  <p>Realistic look at surgical risks, infection risk later, and how the team lowers those risks.</p>
-</section>
+    <section class="testimonial-summary">
+      <h2><a href="/es/hub/transplant/preop/risks.html" data-evt="preop:risks">Riesgos y consideraciones</a></h2>
+      <p>Una mirada realista a los riesgos quirúrgicos, el riesgo de infección más adelante y cómo el equipo reduce esos riesgos.</p>
+    </section>
 
-<section class="testimonial-summary">
-  <h2><a href="/es/hub/transplant/preop/staff/" data-evt="preop:staff">Pre-Op Staff Roles</a></h2>
-  <p>Who does what before surgery—coordinator, nephrologist, surgeon (consult), social worker, financial coordinator.</p>
-</section>
+    <section class="testimonial-summary">
+      <h2><a href="/es/hub/transplant/preop/staff/" data-evt="preop:staff">Equipo preoperatorio</a></h2>
+      <p>Quién hace qué antes de la cirugía: coordinador(a), nefrólogo(a), cirujano(a) (consulta), trabajador(a) social y coordinador(a) financiero(a).</p>
+    </section>
 
-<section class="callout">
-  <p><strong>Tip:</strong> keep a single folder (or phone note) for your med list, allergies, test dates, and clinic numbers. It saves time at every visit.</p>
-</section>
-
+    <section class="callout">
+      <p><strong>Consejo:</strong> guarda en una sola carpeta (o nota del teléfono) tu lista de medicamentos, alergias, fechas de pruebas y teléfonos de la clínica. Ahorrarás tiempo en cada visita.</p>
+    </section>
   </main>
+
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
