--- a/es/hub/transplant/surgery/index.html
+++ b/es/hub/transplant/surgery/index.html
@@ -10,61 +10,66 @@
     gtag('js', new Date());
     gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
   </script>
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Kidney Transplant Overview</title>
+  <title>Cirugía de Trasplante: Estancia Hospitalaria | Tito Needs a Kidney</title>
+  <meta name="description" content="Qué esperar durante la estancia hospitalaria por trasplante de riñón: cómo es la cirugía, quién integra el equipo quirúrgico y la recuperación inmediata." />
+
   <!-- Google Fonts: Open Sans -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="/assets/css/main.css" />
   <script src="/scripts/include.js" defer></script>
   <script src="/scripts/active-link.js" defer></script>
 </head>
 <body>
   <div data-include="/includes_es/header.html"></div>
+
   <main class="content" id="main">
     <div data-include="/includes_es/transplant-subnav.html"></div>
-  <h1>Transplant Surgery: Hospital Stay</h1>
-  <p>
-    The day of transplant surgery marks a major turning point in your kidney journey. 
-    This section explains what to expect during your hospital stay, introduces the 
-    surgical care team, and walks through immediate post-surgery recovery.
-  </p>
 
-<section class="testimonial-summary">
-  <h2><a href="surgery.html" data-evt="transplant:surgery:index:surgery">The Transplant Surgery</a></h2>
-  <p>
-    Learn how the surgery is performed, what happens during the operation,
-    anesthesia details, and how the transplanted kidney is connected and
-    begins working.
-  </p>
-</section>
-
-<section class="testimonial-summary">
-  <h2><a href="staff/index.html" data-evt="transplant:surgery:index:staff">Surgical Staff Roles</a></h2>
-  <p>
-    Meet the transplant surgeons, anesthesiologists, surgical nurses, and other specialists who work together during your procedure.
-  </p>
-</section>
-
-<section class="testimonial-summary">
-  <h2><a href="recovery-inpatient.html" data-evt="transplant:surgery:index:recovery-inpatient">In-Hospital Recovery</a></h2>
-  <p>
-    Understand what happens immediately after surgery—time in recovery rooms,
-    pain management, monitoring, and early movement exercises to aid healing.
-  </p>
-</section>
-
-
-  <section class="callout">
+    <h1>Cirugía de Trasplante: Estancia Hospitalaria</h1>
     <p>
-      A successful transplant is a team effort. Knowing who’s involved and what 
-      to expect in the hospital helps you feel more comfortable and ready for 
-      this life-changing procedure.
+      El día del trasplante marca un gran punto de inflexión en tu camino renal.
+      Esta sección explica qué esperar durante la estancia en el hospital, presenta
+      al equipo quirúrgico y repasa la recuperación inmediata tras la cirugía.
     </p>
-  </section>
+
+    <section class="testimonial-summary">
+      <h2><a href="surgery.html" data-evt="transplant:surgery:index:surgery">La cirugía de trasplante</a></h2>
+      <p>
+        Cómo se realiza la intervención, qué ocurre durante la operación, detalles de la anestesia
+        y cómo se conecta el riñón trasplantado y comienza a funcionar.
+      </p>
+    </section>
+
+    <section class="testimonial-summary">
+      <h2><a href="staff/index.html" data-evt="transplant:surgery:index:staff">Roles del personal quirúrgico</a></h2>
+      <p>
+        Conoce a los cirujanos de trasplante, anestesiólogos, enfermeras quirúrgicas
+        y otros especialistas que trabajan juntos durante tu procedimiento.
+      </p>
+    </section>
+
+    <section class="testimonial-summary">
+      <h2><a href="recovery-inpatient.html" data-evt="transplant:surgery:index:recovery-inpatient">Recuperación en el hospital</a></h2>
+      <p>
+        Qué sucede inmediatamente después de la cirugía: tiempo en recuperación,
+        manejo del dolor, monitorización y ejercicios tempranos de movilidad para favorecer la curación.
+      </p>
+    </section>
+
+    <section class="callout">
+      <p>
+        Un trasplante exitoso es un trabajo en equipo. Saber quién participa y qué esperar en el hospital
+        te ayuda a sentirte más tranquilo y listo para este procedimiento que cambia la vida.
+      </p>
+    </section>
   </main>
+
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
