--- a/es/hub/transplant/surgery/recovery-inpatient.html
+++ b/es/hub/transplant/surgery/recovery-inpatient.html
@@ -10,9 +10,12 @@
     gtag('js', new Date());
     gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
   </script>
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Transplant Surgery - Kidney Transplant Hub</title>
+  <title>Recuperación en el Hospital — Trasplante Renal</title>
+  <meta name="description" content="Qué esperar durante los primeros días tras el trasplante de riñón: control del dolor, líquidos y presión arterial, deambulación temprana y aprendizaje del plan de medicación." />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
@@ -24,81 +27,80 @@
   <div data-include="/includes_es/header.html"></div>
   <main class="content" id="main">
     <div data-include="/includes_es/transplant-subnav.html"></div>
-<div data-include="/includes_es/transplant-surgery-subnav.html"></div>
+    <div data-include="/includes_es/transplant-surgery-subnav.html"></div>
 
-<h1>In-Hospital Recovery</h1>
-<p>
-  The first 2–4 days focus on pain control, steady fluids and blood pressure, early walking, and
-  learning your new medication routine. Plans vary by center and by how quickly the kidney “wakes up.”
-</p>
+    <h1>Recuperación en el hospital</h1>
+    <p>
+      Los primeros 2–4 días se centran en controlar el dolor, mantener líquidos y presión arterial estables,
+      empezar a caminar pronto y aprender tu nueva rutina de medicamentos. Los planes varían según el centro
+      y según qué tan rápido “despierte” el riñón.
+    </p>
 
-<h2>First 24–72 hours: what to expect</h2>
-<ul>
-  <li><strong>PACU → surgical floor:</strong> you wake in recovery, then move to your room when stable.</li>
-  <li><strong>Vitals & labs:</strong> blood pressure, urine output, and creatinine are checked closely.</li>
-  <li><strong>Walking:</strong> first walk the day of/after surgery with help; several short walks daily.</li>
-  <li><strong>Breathing:</strong> use the incentive spirometer every hour when awake; leg pumps (SCDs) help prevent clots.</li>
-  <li><strong>Eating:</strong> start with sips/ice → clear liquids → light food as nausea settles and bowel sounds return.</li>
-</ul>
+    <h2>Primeras 24–72 horas: qué esperar</h2>
+    <ul>
+      <li><strong>URPA → planta quirúrgica:</strong> despiertas en recuperación y, cuando estás estable, te trasladan a tu habitación.</li>
+      <li><strong>Signos vitales y análisis:</strong> se vigilan de cerca la presión arterial, la diuresis y la creatinina.</li>
+      <li><strong>Deambulación:</strong> primer paseo el mismo día o al día siguiente con ayuda; varias caminatas cortas al día.</li>
+      <li><strong>Respiración:</strong> usa el espirómetro incentivador cada hora mientras estés despierto; las botas/bombas neumáticas (SCD) ayudan a prevenir coágulos.</li>
+      <li><strong>Alimentación:</strong> empieza con sorbos/hielo → líquidos claros → alimentos ligeros conforme cede la náusea y regresan los ruidos intestinales.</li>
+    </ul>
 
-<h2>Lines & devices you may have</h2>
-<ul>
-  <li><strong>Foley catheter:</strong> drains urine; commonly removed in a few days once output is steady.</li>
-  <li><strong>Ureteral stent (internal):</strong> protects the bladder connection; removed later in clinic (often 2–6 weeks).</li>
-  <li><strong>IV lines:</strong> for fluids and medicines; sometimes an arterial line for close BP checks.</li>
-  <li><strong>JP drain (bulb):</strong> not always used; collects fluid near the incision. Nurses will empty and measure output; removal when output is low and light.</li>
-  <li><strong>Wound vacuum:</strong> occasionally used to support healing if the incision needs help. Staff manage dressing changes and pump alarms.</li>
-</ul>
+    <h2>Catéteres y dispositivos que podrías tener</h2>
+    <ul>
+      <li><strong>Sonda Foley:</strong> drena la orina; suele retirarse en unos días cuando el gasto es estable.</li>
+      <li><strong>Stent ureteral (interno):</strong> protege la unión con la vejiga; se retira más adelante en consulta (a menudo a las 2–6 semanas).</li>
+      <li><strong>Vías intravenosas:</strong> para líquidos y fármacos; a veces una línea arterial para control estrecho de la presión.</li>
+      <li><strong>Drenaje JP (tipo “bulbo”):</strong> no siempre se usa; recoge líquido cerca de la incisión. Enfermería vacía y mide el débito; se retira cuando es poco y claro.</li>
+      <li><strong>Vacuum de la herida (terapia VAC):</strong> ocasionalmente para apoyar la cicatrización si la incisión lo necesita. El personal maneja los cambios de apósito y alarmas.</li>
+    </ul>
 
-<h2>Pain, nausea, bowels</h2>
-<ul>
-  <li><strong>Pain plan:</strong> multimodal (several methods together). Tell staff early if pain is building.</li>
-  <li><strong>Nausea:</strong> anti-nausea meds are available—ask so you can keep medicines down.</li>
-  <li><strong>Bowels:</strong> stool softeners and early walking prevent constipation; gas pain is common and improves with movement.</li>
-</ul>
+    <h2>Dolor, náuseas e intestino</h2>
+    <ul>
+      <li><strong>Plan analgésico:</strong> multimodal (varios métodos a la vez). Avísale al equipo temprano si el dolor va en aumento.</li>
+      <li><strong>Náusea:</strong> hay antieméticos disponibles; pídelos para poder mantener los medicamentos.</li>
+      <li><strong>Intestino:</strong> ablandadores y caminar temprano previenen estreñimiento; el dolor por gases es común y mejora con movimiento.</li>
+    </ul>
 
-<h2>Fluids, blood pressure, and the kidney</h2>
-<ul>
-  <li>Fluids are adjusted to support the graft; blood pressure targets are set by your team.</li>
-  <li><strong>Delayed graft function:</strong> sometimes the kidney is slow to start, especially with deceased-donor kidneys. Short-term dialysis can be needed while recovery continues.</li>
-</ul>
+    <h2>Líquidos, presión y función del injerto</h2>
+    <ul>
+      <li>Los líquidos se ajustan para apoyar al injerto; el equipo define objetivos de presión arterial.</li>
+      <li><strong>Función retardada del injerto:</strong> a veces el riñón tarda en arrancar, sobre todo con donante fallecido. Puede requerirse diálisis temporal mientras se recupera.</li>
+    </ul>
 
-<h2>Medications & teaching</h2>
-<ul>
-  <li>First doses of anti-rejection medicines often start around surgery day. Nurses/pharmacists will review names, timing, and side effects.</li>
-  <li>Before discharge you’ll do a “teach-back” (show you can take meds correctly) and get a written schedule. Ask about trough labs drawn <em>before</em> morning doses after you’re home.</li>
-</ul>
+    <h2>Medicamentos y enseñanza</h2>
+    <ul>
+      <li>Las primeras dosis de inmunosupresores suelen iniciarse alrededor del día de la cirugía. Enfermería/farmacia repasará nombres, horarios y efectos secundarios.</li>
+      <li>Antes del alta harás un <em>“teach-back”</em> (demostrar que puedes tomar los fármacos correctamente) y recibirás un horario por escrito. Pregunta por los análisis de niveles “valle”, que suelen tomarse <em>antes</em> de la dosis de la mañana cuando estés en casa.</li>
+    </ul>
 
-<h2>Incision care & activity in the hospital</h2>
-<ul>
-  <li>Keep the incision clean and dry; staff will change dressings. Tell them about spreading redness, warmth, foul odor, or new drainage.</li>
-  <li>Walk the hall 3–5 times/day as able. No lifting heavier than a gallon of milk.</li>
-</ul>
+    <h2>Incisión y actividad en el hospital</h2>
+    <ul>
+      <li>Mantén la incisión limpia y seca; el personal cambiará los apósitos. Avisa si aparece enrojecimiento que se extiende, calor, mal olor o nuevo drenaje.</li>
+      <li>Camina por el pasillo 3–5 veces al día según toleres. No levantar más que un galón de leche (~3–4&nbsp;kg).</li>
+    </ul>
 
-<h2>Visitors & sleep</h2>
-<ul>
-  <li>Short, quiet visits help; skip visits if you’re wiped out. Hand hygiene for everyone.</li>
-  <li>Hospitals are noisy—earplugs/eye mask help. Short naps are fine; try for a consistent bedtime.</li>
-</ul>
+    <h2>Visitas y sueño</h2>
+    <ul>
+      <li>Visitas cortas y tranquilas ayudan; si estás agotado, mejor posponer. Higiene de manos para todos.</li>
+      <li>Los hospitales son ruidosos: tapones y antifaz ayudan. Las siestas cortas están bien; intenta un horario de sueño constante.</li>
+    </ul>
 
-<h2>Discharge checklist</h2>
-<ul>
-  <li>Pain controlled on pills; able to walk to the bathroom and hallway with assistance as needed.</li>
-  <li>Eating/drinking without vomiting; bowel function returning.</li>
-  <li>Clear <strong>med schedule</strong> (names, doses, exact times) and first <strong>lab/clinic</strong> dates.</li>
-  <li>Wound care instructions; Foley/JP/wound-vac plans and who to call for problems.</li>
-  <li>Pharmacy picked; refills and prior authorizations started.</li>
-</ul>
+    <h2>Lista para el alta</h2>
+    <ul>
+      <li>Dolor controlado con pastillas; puedes caminar al baño y por el pasillo con ayuda si hace falta.</li>
+      <li>Comes y bebes sin vomitar; el intestino empieza a funcionar.</li>
+      <li><strong>Horario de medicación</strong> claro (nombres, dosis, horas exactas) y primeras citas de <strong>laboratorio/consulta</strong>.</li>
+      <li>Instrucciones de cuidado de la herida; planes para sonda Foley/drenaje JP/VAC y a quién llamar ante problemas.</li>
+      <li>Farmacia elegida; recetas y autorizaciones iniciadas.</li>
+    </ul>
 
-<div class="callout">
-  <p><strong>Ask each day:</strong> What are today’s goals (walks, labs, lines coming out)? What’s my discharge target date? When is my first clinic and lab after discharge?</p>
-</div>
+    <div class="callout">
+      <p><strong>Pregunta cada día:</strong> ¿Cuáles son las metas de hoy (paseos, análisis, retirar líneas)? ¿Cuál es la fecha objetivo de alta? ¿Cuándo son mi primera consulta y laboratorios tras el alta?</p>
+    </div>
 
-<p class="disclaimer">Educational info only. Your surgical and transplant teams will tailor the plan to you.</p>
-
-
-
+    <p class="disclaimer">Información educativa. Tu equipo quirúrgico y de trasplante ajustará el plan a tu situación.</p>
   </main>
+
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
