--- a/includes_es/header.html
+++ b/includes_es/header.html
@@ -10,11 +10,12 @@
     <a href="/es/donor-testimonials.html">Testimonios de donantes</a>
     <a href="/es/book.html">Libro</a>
   </nav>
-<div class="lang-switch" aria-label="Language" style="margin-left:auto;display:flex;align-items:center;gap:.5rem;">
-  <a href="#" data-lang="en" style="font-weight:600">EN</a>
+<div class="lang-switch" aria-label="Language">
+  <a href="#" data-lang="en">EN</a>
   <span aria-hidden="true">/</span>
-  <a href="#" data-lang="es" style="font-weight:600">ES</a>
+  <a href="#" data-lang="es">ES</a>
 </div>
+
 <script src="/assets/js/lang-switch.js" defer></script>
 
 </header>
